workking on mobile reponsiveness, added a div to contain the  h1 element in the user and computer choice so  as to  avoid overflow and maintain shape of the container

--- a/mobile.css
+++ b/mobile.css
@@ -52,11 +52,21 @@
     line-height: 2;
     text-align: center;
   }
-  h1 {
+
+  .text {
+    width: 100%;
+    height: 50px;
+    /* padding-left: 5px;
+    padding-right: 5px; */
+  }
+  .text h1 {
     margin-top: 10px;
-    font-size: 18px;
+    font-size: 12px;
+    line-height: 1.5;
+    font-family: "Press Start 2P";
     /* line-height: 2; */
     text-align: center;
+    padding: 2px;
   }
   nav {
     padding: 10px;
@@ -68,5 +78,11 @@
 
   .winner .winner-message {
     font-size: 18px;
+  }
+
+  .box {
+    margin-top: 20px;
+    height: 90px;
+    width: 90px;
   }
 }
